Fix an erroneous comment about the operators required by binarySearch https://bugs.webkit.org/show_bug.cgi?id=102406

Reviewed by Anders Carlsson.

* wtf/StdLibExtras.h: binarySearch needs '==' and '<', not '--', '<' and '>'.


Canonical link: https://commits.webkit.org/120500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134791 268f45cc-cd09-0410-ab3c-d52691b4dbfc